crates/anodized/tests/compile_fail/captures_scope_isolation.stderr
error[E0425]: cannot find value `old_x` in this scope
  --> tests/compile_fail/captures_scope_isolation.rs:18:13
   |
18 |     let a = old_x;
   |             ^^^^^ not found in this scope

error[E0425]: cannot find value `old_y` in this scope
  --> tests/compile_fail/captures_scope_isolation.rs:19:13
   |
19 |     let b = old_y;
   |             ^^^^^ not found in this scope

error[E0425]: cannot find value `old_x` in this scope
  --> tests/compile_fail/captures_scope_isolation.rs:25:9
   |
25 |         old_x > 0,
   |         ^^^^^ not found in this scope

error[E0425]: cannot find value `old_x` in this scope
  --> tests/compile_fail/captures_scope_isolation.rs:37:9
   |
37 |         old_x > 0,
   |         ^^^^^ not found in this scope
